Fix textbox resizing (hidden scrollbar bug)

--- a/src/styles/TweepModule.css
+++ b/src/styles/TweepModule.css
@@ -31,6 +31,7 @@
   border: none;
   outline: none;
   resize: none;
+  overflow: hidden;
 }
 
 .tweepModule .toolbar {
